--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-typescript": "^0.14.0",
     "file-loader": "^5.1.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -57,8 +58,11 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "eslintInit": "eslint --init",
-    "tsm": "tsm src --watch"
+    "tsm": "tsm src --watch",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://KakeruChang.github.io/Self-Introduction",
   "prettier": {
     "singleQuote": true,
     "jsxSingleQuote": true,
