--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "prettier": {
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "semi": false
+    "semi": false,
+    "trailingComma": "none"
   }
 }
